--- a/vol1/01-13.md
+++ b/vol1/01-13.md
@@ -2,7 +2,7 @@
 
 &emsp;
 
-“那么雨宫同学，你之前给我发消息，说对《La Fille du Livre》最后两卷有自己的看法。具体来说是怎么样呢？”
+「那么雨宫同学，你之前给我发消息，说对《La Fille du Livre》最后两卷有自己的看法。具体来说是怎么样呢？」
 
 我和渡边学姐分坐在小餐厅一角的餐桌两旁——恰巧和两星期前同样的位置。
 
@@ -10,81 +10,81 @@
 
 我喝了一口MTD，将翠绿色的塑料瓶放回桌上，随后开始陈述自己的看法：
 
-“我认为作者对《La Porte Étroite》的理解出现了重大差错。首先，《La Porte Étroite》的女主人公——也就是Alissa，我认为她后来的一系列选择都源自于幼时目睹母亲私生活问题后产生的罪恶感。而《La Fille du Livre》的女主人公，即使她父母一代的私生活同样混乱，但她并没有被这一问题困扰的迹象。”
+「我认为作者对《La Porte Étroite》的理解出现了重大差错。首先，《La Porte Étroite》的女主人公——也就是Alissa，我认为她后来的一系列选择都源自于幼时目睹母亲私生活问题后产生的罪恶感。而《La Fille du Livre》的女主人公，即使她父母一代的私生活同样混乱，但她并没有被这一问题困扰的迹象。」
 
-“雨宫同学，我认为这是作者的问题。在这种复杂的家庭环境下居然成长为一个普通的女高中生，这比她吃书的习惯还要让人觉得恐怖。”
+「雨宫同学，我认为这是作者的问题。在这种复杂的家庭环境下居然成长为一个普通的女高中生，这比她吃书的习惯还要让人觉得恐怖。」
 
-“然后，Alissa对Jérôme……”
+「然后，Alissa对Jérôme……」
 
-“是杰罗姆吧？”
+「是杰罗姆吧？」
 
-“这是语言转换的问题，Jérôme才是正确的读法。嘛，先不论这个，Alissa的爱指向的是她幻想中的Jérôme，而不是现实中的Jérôme。她后来选择的人生轨迹，用『殉道』形容似乎更为恰当。当然，这也是《La Porte Étroite》本身浓厚的宗教色彩导致的必然结果。然而，文学创作终究不能和宗教信仰等同起来。或者说，《La Fille du Livre》的作者试图将这两者等同起来的做法，让两位主人公的『真实性』降低了——而这两卷本该是让他们立体化的部分。”
+「这是语言转换的问题，Jérôme才是正确的读法。嘛，先不论这个，Alissa的爱指向的是她幻想中的Jérôme，而不是现实中的Jérôme。她后来选择的人生轨迹，用『殉道』形容似乎更为恰当。当然，这也是《La Porte Étroite》本身浓厚的宗教色彩导致的必然结果。然而，文学创作终究不能和宗教信仰等同起来。或者说，《La Fille du Livre》的作者试图将这两者等同起来的做法，让两位主人公的『真实性』降低了——而这两卷本该是让他们立体化的部分。」
 
-“这方面我不同意你的意见。作者将『文学创作』拔高到和『宗教信仰』同一高度的尝试并没有什么问题。问题在于，她并没有足够的能力做到这一点。”
+「这方面我不同意你的意见。作者将『文学创作』拔高到和『宗教信仰』同一高度的尝试并没有什么问题。问题在于，她并没有足够的能力做到这一点。」
 
-“能力？”
+「能力？」
 
 我的脑海中冒出了问号。
 
-“雨宫同学你没发现吗？《La Fille du Livre》中最打动读者的那一句话，其实是……”
+「雨宫同学你没发现吗？《La Fille du Livre》中最打动读者的那一句话，其实是……」
 
-“是主人公的青梅竹马在他面前跳楼时说的那一句。”
+「是主人公的青梅竹马在他面前跳楼时说的那一句。」
 
-“没错。我认为那才是作者真正的心声。我读过这位作者的不同作品，结果发现，只有那些她将『已有的故事』改编为『自己的故事』的作品才最终得到了大家的好评，而每当她不这么做的时候，最终都会收获相当微妙的评价。”
+「没错。我认为那才是作者真正的心声。我读过这位作者的不同作品，结果发现，只有那些她将『已有的故事』改编为『自己的故事』的作品才最终得到了大家的好评，而每当她不这么做的时候，最终都会收获相当微妙的评价。」
 
 我摸索着记忆中《La Fille du Livre》的角色设定——没错，这并非主人公的风格，而是他那位青梅竹马的风格。
 
-“学姐想说的是，这位作者擅长改编，而不擅长原创？这不是那位青梅竹马——嗯，第五卷的女主角吗？”
+「学姐想说的是，这位作者擅长改编，而不擅长原创？这不是那位青梅竹马——嗯，第五卷的女主角吗？」
 
 渡边学姐点了点头，继续说了下去：
 
-“你可以认为这位青梅竹马是作者本人的投影，男主人公则是她理想中的自己。至于引领男主人公走上创作之路的女主人公——抱歉，我口有点干。你那瓶MTD能分我一点吗？”
+「你可以认为这位青梅竹马是作者本人的投影，男主人公则是她理想中的自己。至于引领男主人公走上创作之路的女主人公——抱歉，我口有点干。你那瓶MTD能分我一点吗？」
 
 我毫不犹豫地将饮料瓶递了过去。学姐喝了一口就放下了。
 
-“感觉味道有点怪。”
+「感觉味道有点怪。」
 
-“我倒是觉得还好。刚才学姐提到女主人公的设定，具体是怎么样的？”
+「我倒是觉得还好。刚才学姐提到女主人公的设定，具体是怎么样的？」
 
-“女主人公对文学作品的理解，并不是一个女高中生应有的。换而言之，她只是作者的代言人，相比其他角色显得不接地气——实际上，在前面几卷，女主人公在故事中扮演的也是同样的角色。”
+「女主人公对文学作品的理解，并不是一个女高中生应有的。换而言之，她只是作者的代言人，相比其他角色显得不接地气——实际上，在前面几卷，女主人公在故事中扮演的也是同样的角色。」
 
-“说起来，我对这位女主人公的某个设定，倒是觉得很不爽。”
+「说起来，我对这位女主人公的某个设定，倒是觉得很不爽。」
 
-“哪个设定？”
+「哪个设定？」
 
-“她讨厌数学，认为数学公式没有味道——这只能说明她对数学的美感一无所知。文学，美术，音乐，仔细研究的话，背后都能看到数学的影子。”
+「她讨厌数学，认为数学公式没有味道——这只能说明她对数学的美感一无所知。文学，美术，音乐，仔细研究的话，背后都能看到数学的影子。」
 
-“这我倒不觉得。”
+「这我倒不觉得。」
 
 我的判断，又一次被学姐反驳。
 
-“怎么说？”
+「怎么说？」
 
-“不如说加上了这个设定，才让女主人公『看上去』更像一个普通的女高中生。”
+「不如说加上了这个设定，才让女主人公『看上去』更像一个普通的女高中生。」
 
-“换而言之，她其他方面的表现，就像学姐你之前提到的一样，并不是一个女高中生应有的样子吗？我倒觉得，在这之前，她作为一个『角色』的形象都不够立体——同样，男主人公也有这个问题。本来《La Fille du Livre》的最后两卷应该将他们的形象通过故事的进行进行立体化，但由于选错了致敬作品——或者说，对《La Porte Étroite》的理解出现了严重错误，最终适得其反。”
+「换而言之，她其他方面的表现，就像学姐你之前提到的一样，并不是一个女高中生应有的样子吗？我倒觉得，在这之前，她作为一个『角色』的形象都不够立体——同样，男主人公也有这个问题。本来《La Fille du Livre》的最后两卷应该将他们的形象通过故事的进行进行立体化，但由于选错了致敬作品——或者说，对《La Porte Étroite》的理解出现了严重错误，最终适得其反。」
 
-“我倒是觉得，作者对纪德本人的看法就有问题。”
+「我倒是觉得，作者对纪德本人的看法就有问题。」
 
-“渡边学姐可以稍微详细解释一下吗？”
+「渡边学姐可以稍微详细解释一下吗？」
 
 听到我的问题，学姐思考了一下回答道：
 
-“举一个典型例子好了。你知不知道纪德的同性取向？”
+「举一个典型例子好了。你知不知道纪德的同性取向？」
 
-“之前读《La Porte Étroite》的时候，稍微查过一点。”
+「之前读《La Porte Étroite》的时候，稍微查过一点。」
 
-“纪德对自己的妻子隐瞒了自己的取向问题，也隐瞒了自己的同性性经历。然而《La Fille du Livre》的作者则认为，正因为纪德深爱自己的妻子，所以才向她隐瞒了这一事实。”
+「纪德对自己的妻子隐瞒了自己的取向问题，也隐瞒了自己的同性性经历。然而《La Fille du Livre》的作者则认为，正因为纪德深爱自己的妻子，所以才向她隐瞒了这一事实。」
 
 听到这句话的我不由得血气上涌。回过神来的时候，我已经拍案而起。
 
-“什么混账逻辑！不如说隐瞒自己的性取向才是真正的犯罪吧？如果针对这一事件本身，纪德的妻子难道不是纯粹的被害者吗？凭什么她就要和一个不爱自己的同性恋维持夫妻关系？”
+「什么混账逻辑！不如说隐瞒自己的性取向才是真正的犯罪吧？如果针对这一事件本身，纪德的妻子难道不是纯粹的被害者吗？凭什么她就要和一个不爱自己的同性恋维持夫妻关系？」
 
 渡边学姐似乎被我的反应吓了一大跳。过了好长一会才对我说道：
 
-“雨宫同学，你没关系吧？”
+「雨宫同学，你没关系吧？」
 
-“抱歉学姐，我可能有点激动——大概是情不自禁吧。”
+「抱歉学姐，我可能有点激动——大概是情不自禁吧。」
 
 这是我的真心话。我大概将纪德的妻子，放在和自己一样的受害者位置。
 
@@ -94,25 +94,25 @@
 
 颓然坐回餐桌旁的我，对学姐幽幽地说道：
 
-“学姐，刚才我们说到哪了？”
+「学姐，刚才我们说到哪了？」
 
-“说到《La Fille du Livre》这一作品中的缺陷。纪德的《La Porte Étroite》有着非常严重的宗教色彩，而《La Fille du Livre》的最后两卷对此模仿的非常差。简直就可以说是语文不及格。雨宫同学，当想要致敬一部作品的时候，相比复刻作品中角色的经历，更需要注重精神意义上的互通性。”
+「说到《La Fille du Livre》这一作品中的缺陷。纪德的《La Porte Étroite》有着非常严重的宗教色彩，而《La Fille du Livre》的最后两卷对此模仿的非常差。简直就可以说是语文不及格。雨宫同学，当想要致敬一部作品的时候，相比复刻作品中角色的经历，更需要注重精神意义上的互通性。」
 
-“精神意义上的……互通性？”
+「精神意义上的……互通性？」
 
-“没错。《La Fille du Livre》第一卷对《La Déchéance d'un Homme》的致敬就非常出色，让我感觉到，作者真正做到了站在和津岛先生同样的高度看待故事中的角色。”
+「没错。《La Fille du Livre》第一卷对《La Déchéance d'un Homme》的致敬就非常出色，让我感觉到，作者真正做到了站在和津岛先生同样的高度看待故事中的角色。」
 
 我点了点头。《La Fille du Livre》的第一卷，的确能够给我带来和阅读《La Déchéance d'un Homme》时一样的氛围。
 
-“但是到最后两卷的时候，这种平视感彻底消失了。作者根本无法再现纪德作品中呈现的精神世界。她有意将女主人公做出成为主人公的『编辑』的这一选择，变与为阿丽莎『殉道』的决意相似的存在。也许在作者眼中，女主人公放弃成为『作家』而选择成为『编辑』就是穿过了『窄门』而『殉道』的象征。但我认为并非如此。”
+「但是到最后两卷的时候，这种平视感彻底消失了。作者根本无法再现纪德作品中呈现的精神世界。她有意将女主人公做出成为主人公的『编辑』的这一选择，变与为阿丽莎『殉道』的决意相似的存在。也许在作者眼中，女主人公放弃成为『作家』而选择成为『编辑』就是穿过了『窄门』而『殉道』的象征。但我认为并非如此。」
 
 渡边学姐停顿了一下，说出了她的结论：
 
-“当《La Fille du Livre》的女主人公决心成为『编辑』的那一刻，就已经和『殉道』这一意象发生了根本上的背离。说起来，《La Fille du Livre》的主人公也经常被读者诟病。”
+「当《La Fille du Livre》的女主人公决心成为『编辑』的那一刻，就已经和『殉道』这一意象发生了根本上的背离。说起来，《La Fille du Livre》的主人公也经常被读者诟病。」
 
-“被诟病——指的是认为他太软弱？”
+「被诟病——指的是认为他太软弱？」
 
-“对。”
+「对。」
 
 我不禁产生了将自己与这位主人公比较的念头。
 
@@ -124,11 +124,11 @@
 
 既然自己有写作的才能，那么这种才能也可以成为我的武器。
 
-“而擅自决定离开的女主人公，对主人公说『我只是你一个人的《文学少女》』……”
+「而擅自决定离开的女主人公，对主人公说『我只是你一个人的《文学少女》』……」
 
 我调整了一下呼吸，继续说道：
 
-“抱歉，这种女人说出的话，我**一个字都不能信**。”
+「抱歉，这种女人说出的话，我**一个字都不能信**。」
 
 说出最后几个字的时候，我脑海中浮现的，是多年后得知女主人公去追回自己负责的作家时，主人公流露出的嫉妒心。
 
@@ -138,51 +138,51 @@
 
 听到我这句话的渡边学姐，露出了一个我难以理解的笑容：
 
-“我倒是觉得，像你这样的人，根本就不会和女主人公在一起。”
+「我倒是觉得，像你这样的人，根本就不会和女主人公在一起。」
 
-“为什么？”
+「为什么？」
 
-“大概在青梅竹马跳楼的那一刻，你就会决定**只为了她一个人**而生活——不论之后是否还会写作。”
+「大概在青梅竹马跳楼的那一刻，你就会决定**只为了她一个人**而生活——不论之后是否还会写作。」
 
-“学姐你这个说法，有什么依据吗？”
+「学姐你这个说法，有什么依据吗？」
 
-“大概是女孩子特有的直觉吧。”
+「大概是女孩子特有的直觉吧。」
 
 学姐清了清嗓子。我想把MTD的瓶子递过去，拿起来的时候却发现里面已经空了。
 
-“学姐要喝点什么吗？”
+「学姐要喝点什么吗？」
 
-“我想想……嗯，可乐吧。”
+「我想想……嗯，可乐吧。」
 
-“那我去去就回。”
+「那我去去就回。」
 
 说完我站起身，去饮料区拿了一瓶可乐和一瓶矿泉水，结账后回到了学姐对面坐下。
 
-“说起来学姐刚才提到《La Fille du Livre》中主人公的青梅竹马和作者很相似……”
+「说起来学姐刚才提到《La Fille du Livre》中主人公的青梅竹马和作者很相似……」
 
 我迟疑了一下，才将内心中的问题丢了出来：
 
-“那么现实中，又有哪些创作者能像《La Fille du Livre》的主人公一样，仅凭自己的生活经历就能写出畅销作品呢？”
+「那么现实中，又有哪些创作者能像《La Fille du Livre》的主人公一样，仅凭自己的生活经历就能写出畅销作品呢？」
 
-“有啊，轻小说业界就有一位。你应该知道那部拿下三连冠的作品吧？”
+「有啊，轻小说业界就有一位。你应该知道那部拿下三连冠的作品吧？」
 
-“嗯，知道。”
+「嗯，知道。」
 
 我知道这部作品的名字，以前也试着读过，但连第一卷都没看完就放弃了。
 
 因为作者的遣词用句，实在令我难以理解——或者说，在我眼中，**就不像是正常人写得出来的内容**。
 
-“这个世界上有两类创作者。第一类只凭借自己的人生经历就能写出脍炙人口的故事，而第二类人只能在自己阅读过的作品基础上创作出同样广受好评的故事。虽然《La Fille du Livre》的主人公创作的并非轻小说而是大众小说，但他和那部三连冠作品的作者本质上是一类人。”
+「这个世界上有两类创作者。第一类只凭借自己的人生经历就能写出脍炙人口的故事，而第二类人只能在自己阅读过的作品基础上创作出同样广受好评的故事。虽然《La Fille du Livre》的主人公创作的并非轻小说而是大众小说，但他和那部三连冠作品的作者本质上是一类人。」
 
-“遗憾的是，尽管那部作品非常出色，我却一点都读不进去。或者说，读的时候会产生生理上的不适感。我对它的了解，完全来自于网上看到的一篇基于MBTI理论的分析文章。”
+「遗憾的是，尽管那部作品非常出色，我却一点都读不进去。或者说，读的时候会产生生理上的不适感。我对它的了解，完全来自于网上看到的一篇基于MBTI理论的分析文章。」
 
 大概这只能归结为我本身的问题。渡边学姐喝了一口可乐后说道：
 
-“《La Fille du Livre》试图探讨「不正常的角色们」如何追寻属于自己的幸福这一主题。但是作者在这方面的写作能力太差了。就以女主人公为例，正传的最后两卷最后给我的印象是，她喜欢的是『主人公的作品』而非『主人公』本人——只有这样才能维持她内心中的『异常存在』。这样一来，她就和某依赖读者投票决定漫画存续与否的杂志的编辑们没有任何区别了——纯粹的编辑机器。而被这一机器摧毁的漫画家，可以说数不胜数。”
+「《La Fille du Livre》试图探讨「不正常的角色们」如何追寻属于自己的幸福这一主题。但是作者在这方面的写作能力太差了。就以女主人公为例，正传的最后两卷最后给我的印象是，她喜欢的是『主人公的作品』而非『主人公』本人——只有这样才能维持她内心中的『异常存在』。这样一来，她就和某依赖读者投票决定漫画存续与否的杂志的编辑们没有任何区别了——纯粹的编辑机器。而被这一机器摧毁的漫画家，可以说数不胜数。」
 
-“纯粹的编辑机器？”
+「纯粹的编辑机器？」
 
-“在我眼中这样的编辑甚至不如某头牌文库的前任总编。毕竟那位总编可是说了『只要有趣的话什么都可以』——他大概会非常赏识《La Fille du Livre》中主人公的那位青梅竹马写出来的故事。因为它们足够有趣。再回到《La Fille du Livre》本身，纪德在《La Porte Étroite》中塑造的，是一个为了把握「自我」而放弃爱情的阿丽莎；而《La Fille du Livre》的女主人公最终选择的是牺牲「自我」。两者看上去很像，但本质却完全相反。到了这一步，只能说《La Fille du Livre》的最后两卷和它试图致敬的《La Porte Étroite》根本就是毫无关联的两个东西。作者没能在这两卷做到概念上的「完美」。面对纪德在《La Porte Étroite》中向观众抛出的问题，她没有给出一份合格的答卷。”
+「在我眼中这样的编辑甚至不如某头牌文库的前任总编。毕竟那位总编可是说了『只要有趣的话什么都可以』——他大概会非常赏识《La Fille du Livre》中主人公的那位青梅竹马写出来的故事。因为它们足够有趣。再回到《La Fille du Livre》本身，纪德在《La Porte Étroite》中塑造的，是一个为了把握「自我」而放弃爱情的阿丽莎；而《La Fille du Livre》的女主人公最终选择的是牺牲「自我」。两者看上去很像，但本质却完全相反。到了这一步，只能说《La Fille du Livre》的最后两卷和它试图致敬的《La Porte Étroite》根本就是毫无关联的两个东西。作者没能在这两卷做到概念上的「完美」。面对纪德在《La Porte Étroite》中向观众抛出的问题，她没有给出一份合格的答卷。」
 
 &emsp;
 
