--- a/vol1/01-14.md
+++ b/vol1/01-14.md
@@ -4,13 +4,13 @@
 
 从小餐厅返回宿舍的路上，我一直在思考渡边学姐对《La Fille du Livre》的最后两卷及其致敬的《La Porte Étroite》之间关系的评论。
 
-——两个故事中的女主人公看上去都放弃了自己的“恋爱”，但选择的方向却完全相反。
+——两个故事中的女主人公看上去都放弃了自己的「恋爱」，但选择的方向却完全相反。
 
 前者牺牲了自我，而后者则想要坚守自我。
 
 不对。在这之前，我甚至无法回答另一个更为基础的问题。
 
-——“恋爱”是什么？
+——「恋爱」是什么？
 
 上小学时的我，对此还没有一个清晰的认识。不如说，背负着那样一种<ruby><rb>家庭关系</rb><rt>无期徒刑</rt></ruby>的我，早已放弃了对异性关系的美好想象。
 
@@ -28,13 +28,13 @@
 
 到了上初中的时候，在那个女人的<ruby><rb>教育</rb><rt>限制</rt></ruby>之下，我开始有意识地和同学们拉开距离。
 
-在这三年期间，也许曾有那么一两个幸运儿连续三年和我同班，但进入这所学校还不到一个月，我就把他们的名字忘的一干二净。<ruby><rb>没能</rb><rt>不想</rt></ruby>与同学建立密切关系的我，只不过是一直以冰冷的目光<ruby><rb>注视</rb><rt>扫描</rt></ruby>着他们的学校生活，从中汲取必要的知识罢了。除此之外，我对于人与人的“关系”的理解，就仅限于自己在各类书籍中阅读到的内容。
+在这三年期间，也许曾有那么一两个幸运儿连续三年和我同班，但进入这所学校还不到一个月，我就把他们的名字忘的一干二净。<ruby><rb>没能</rb><rt>不想</rt></ruby>与同学建立密切关系的我，只不过是一直以冰冷的目光<ruby><rb>注视</rb><rt>扫描</rt></ruby>着他们的学校生活，从中汲取必要的知识罢了。除此之外，我对于人与人的「关系」的理解，就仅限于自己在各类书籍中阅读到的内容。
 
-所以在我的知识库里，所谓的“恋爱”，也只不过是异性之间彼此吸引和追逐的过程而已。
+所以在我的知识库里，所谓的「恋爱」，也只不过是异性之间彼此吸引和追逐的过程而已。
 
-——就如同赋格曲的词义包含了“追逐”一样。
+——就如同赋格曲的词义包含了「追逐」一样。
 
-“这么一想，学姐还给我留了一道题呢。”
+「这么一想，学姐还给我留了一道题呢。」
 
 决定做点事情以转换心情的我，自言自语着摸出钥匙，打开了宿舍的门。
 
@@ -44,9 +44,9 @@
 
 在书桌前坐好的我，启动笔记本电脑进入系统，随后在浏览器上熟练地敲下Voustube的网址。首页加载完毕后，我开始在搜索栏中寻找想要的视频。
 
-“Bach Art of Fugue Contrapunctus XIV”。
+「Bach Art of Fugue Contrapunctus XIV」。
 
-打完这串字符后，我犹豫了一下，又将“Art of Fugue”删掉——它与后面的Contrapunctus在查询的层面上重复了。思索片刻后，我又加上了“Glenn Gould”这两个单词——那是举世熟知的一位钢琴家的名字。
+打完这串字符后，我犹豫了一下，又将「Art of Fugue」删掉——它与后面的Contrapunctus在查询的层面上重复了。思索片刻后，我又加上了「Glenn Gould」这两个单词——那是举世熟知的一位钢琴家的名字。
 
 古尔德演奏的版本出现在搜索结果的最前面。我从书桌抽屉中取出有线耳塞插入笔记本电脑一侧的插孔，又走到窗边拉上窗帘，随后点亮了房间里的灯，这才回到书桌前坐下。
 
@@ -170,7 +170,7 @@ III-3-d。
 
 <ruby><rb>冰冷的声音</rb><rt>我的声音</rt></ruby>再一次响起。
 
-倒也没错。赋格这个词的含义不仅包括“追逐”，也包括了“逃避”。
+倒也没错。赋格这个词的含义不仅包括「追逐」，也包括了「逃避」。
 
 从入学式到现在已经过了快三个星期。这三个星期中，我只不过是利用自己过去<ruby><rb>观察他人获得的知识</rb><rt>扫描并剽窃来的知识</rt></ruby>，将自己包装成一个看上去很好相处的模范生罢了。
 
@@ -224,7 +224,7 @@ III-3-d。
 
 这更加不合常理。那个男人和那个女人虽然平常从不互相沟通，但并不代表他们不会互相观察——更准确地说，他们一直都拿着看不见的放大镜，试图找出对方身上的瑕疵，从而占据道德上的制高点。
 
-但现在再纠结这些内容也已经没有用了。对我而言，重要的不是“那个陌生男人是谁”这一问题，而是——
+但现在再纠结这些内容也已经没有用了。对我而言，重要的不是「那个陌生男人是谁」这一问题，而是——
 
 他们要去哪里？
 
@@ -234,17 +234,17 @@ III-3-d。
 
 突然，那个陌生男人向后看了一眼，差一点就发现了我。隐约中，我似乎能听到两人之间的对话。
 
-“总感觉有人跟着我们。”
+「总感觉有人跟着我们。」
 
-“是吗？”
+「是吗？」
 
 是那个女人若无其事的声音。她继续说道：
 
-“就算真有人跟着又怎么样？U有什么好怕的？”
+「就算真有人跟着又怎么样？U有什么好怕的？」
 
 话音刚落，那个女人就加快了脚步。被她称为U的陌生男子随后也跟上了她的步伐，两人又走了几步，走进了一栋建筑物的正门。
 
-做出“现在就跟进去很可能会被抓个现行”的判断后，我留在原地，打开手机上的数独App，做完一个简单难度的数独题后，才从建筑物的阴影中走了出来。
+做出「现在就跟进去很可能会被抓个现行」的判断后，我留在原地，打开手机上的数独App，做完一个简单难度的数独题后，才从建筑物的阴影中走了出来。
 
 一分钟后，我站在了那两个人走进的建筑物的正门前。
 
