--- a/vol1/01-15.md
+++ b/vol1/01-15.md
@@ -22,7 +22,7 @@
 
 一个危险的可能性浮现出来——那个女人，认为**这不是婚内出轨**。
 
-我立刻想到了一个佐证这个可能性的证据。那个女人在公开场合使用的姓氏，并不是<ruby><rb>那个男人的姓氏</rb><rt>雨宫</rt></ruby>，而是“蒲池”。
+我立刻想到了一个佐证这个可能性的证据。那个女人在公开场合使用的姓氏，并不是<ruby><rb>那个男人的姓氏</rb><rt>雨宫</rt></ruby>，而是「蒲池」。
 
 但是，如果这个可能性成立，那么那个女人和那个男人之间，到底是什么关系？为什么那个女人又要让我使用那个男人的姓氏？
 
@@ -80,37 +80,37 @@
 
 今天的学姐穿着一件米黄色的连衣裙，脚上穿着同色的低跟鞋，肩上则挎着一个淡蓝色的帆布手提袋。
 
-“雨宫同学到的还真是早呢。”
+「雨宫同学到的还真是早呢。」
 
-“不好意思，让学姐久等了。”
+「不好意思，让学姐久等了。」
 
 听到我的话，学姐微笑了一下：
 
-“没什么，我只是习惯提前到而已。和さやか她们一起外出的时候，往往等到过了约定时间好久她们才会来。”
+「没什么，我只是习惯提前到而已。和さやか她们一起外出的时候，往往等到过了约定时间好久她们才会来。」
 
-“毕竟是女孩子嘛……”
+「毕竟是女孩子嘛……」
 
 我说到一半就住了口。在渡边学姐面前讲出我这种对异性的刻板印象只会让她困扰。为了转移话题，我看向学姐的手提包，上面用白色的线绣了几个英语单词。
 
 Pale Blue Dot。
 
-“雨宫同学知道这个词来自哪里吗？”
+「雨宫同学知道这个词来自哪里吗？」
 
-“不太确定，但总感觉在哪里看过。”
+「不太确定，但总感觉在哪里看过。」
 
-听到学姐的问题，我掏出手机开始搜索。第一条搜索结果上面，有着“Voyager 1”的字样。
+听到学姐的问题，我掏出手机开始搜索。第一条搜索结果上面，有着「Voyager 1」的字样。
 
 旅行者一号。这让我意识到了什么。
 
-“说起来，我记得去年某个手机游戏似乎实装了以旅行者一号为原型的角色？”
+「说起来，我记得去年某个手机游戏似乎实装了以旅行者一号为原型的角色？」
 
-“你说的应该是F〇te/GO吧？我记得的确有。不过，旅行者一号只是那个小男孩的原型之一。另一个原型应该是——《Le Petit Prince》的主人公。”
+「你说的应该是F〇te/GO吧？我记得的确有。不过，旅行者一号只是那个小男孩的原型之一。另一个原型应该是——《Le Petit Prince》的主人公。」
 
 我轻咳了一下，向学姐问道：
 
-“渡边学姐觉得《Le Petit Prince》是个怎样的故事？”
+「渡边学姐觉得《Le Petit Prince》是个怎样的故事？」
 
-“我觉得——它是一个非常**美丽**的故事。”
+「我觉得——它是一个非常**美丽**的故事。」
 
 学姐露出了若有所思的表情。然而，尽管我在阅读《Le Petit Prince》的时候也能感觉到其中的魅力之处，却猜不出学姐此刻的内心想法。
 
@@ -118,61 +118,61 @@ Pale Blue Dot。
 
 &emsp;
 
-“说起来，雨宫同学的这双运动鞋款式我似乎没怎么见过呢。”
+「说起来，雨宫同学的这双运动鞋款式我似乎没怎么见过呢。」
 
-“其实这双鞋是女式运动鞋。”
+「其实这双鞋是女式运动鞋。」
 
-“女式鞋？”
+「女式鞋？」
 
 渡边学姐露出了惊讶的表情，我则若无其事地继续说道：
 
-“包括这双在内，我之前穿的运动鞋基本都是我妈穿过一段时间之后丢给我的。”
+「包括这双在内，我之前穿的运动鞋基本都是我妈穿过一段时间之后丢给我的。」
 
-“你穿着的时候，就不会觉得不合脚吗？”
+「你穿着的时候，就不会觉得不合脚吗？」
 
-“应该没有吧。”
+「应该没有吧。」
 
 头顶的云彩遮住了多余的阳光，但又不至于过分阴沉。对我而言，这还算是个不错的天气。
 
 在<ruby><rb>火车站</rb><rt>Hauptbahnhof</rt></ruby>的地下走下电车后，我和渡边学姐正走在通向<ruby><rb>中央广场</rb><rt>Zentrumplatz</rt></ruby>的石块路面上。
 
-“渡边学姐，我们这是准备去哪？”
+「渡边学姐，我们这是准备去哪？」
 
 我不想在运动鞋的问题上纠缠太久，于是向学姐询问这次外出的目的地。
 
-“我打算找个<ruby><rb>大型综合商场</rb><rt>Shopping Mall</rt></ruby>逛逛。名字好像是……Kronos？我记得不太清楚了。”
+「我打算找个<ruby><rb>大型综合商场</rb><rt>Shopping Mall</rt></ruby>逛逛。名字好像是……Kronos？我记得不太清楚了。」
 
-“让我查查。”
+「让我查查。」
 
 我看了一眼身旁的路牌，随即翻出手机，在地图上查询通向Kronos的路线。从我们所在的位置走过去大概要5分钟，而且需要穿过中央广场。
 
-“应该是从我们所在的Heinrich Straße穿过Zentrumplatz再走一小段路就到。不会超过10分钟。”
+「应该是从我们所在的Heinrich Straße穿过Zentrumplatz再走一小段路就到。不会超过10分钟。」
 
-“雨宫同学，刚才你看的那个路牌应该是……”
+「雨宫同学，刚才你看的那个路牌应该是……」
 
-“是德语。”
+「是德语。」
 
-“你会德语吗？”
+「你会德语吗？」
 
 看到渡边学姐一脸好奇的样子，我赶忙回答：
 
-“不能说完全会，但是我能认出这个城市中以德语标出的地名。”
+「不能说完全会，但是我能认出这个城市中以德语标出的地名。」
 
-“好厉害……我完全看不懂。”
+「好厉害……我完全看不懂。」
 
-“其实我很多时候也只是用在线翻译把德语翻译成英语，再去理解这些词的意思。其他语言也是一样，我偶尔会下载一些版权进入公众领域的小说的原文版，然后再和翻译版对照着阅读，确保自己的理解没有出错。”
+「其实我很多时候也只是用在线翻译把德语翻译成英语，再去理解这些词的意思。其他语言也是一样，我偶尔会下载一些版权进入公众领域的小说的原文版，然后再和翻译版对照着阅读，确保自己的理解没有出错。」
 
 不管怎么说，这只是我的阅读习惯而已，并不是什么很值得夸耀的事。
 
 我们就这样一边闲聊，一边走到了中央广场上。面对通向不同方向的道路，渡边学姐似乎有点分不清方向，她随便指了一条路对我问道：
 
-“是往那边走吗？”
+「是往那边走吗？」
 
-“那边是去Rathaus……哦不，市役所的路。这边才是通往Kronos的路。”
+「那边是去Rathaus……哦不，市役所的路。这边才是通往Kronos的路。」
 
-“这样吗……抱歉，谢谢你。”
+「这样吗……抱歉，谢谢你。」
 
-“哪有的事。”
+「哪有的事。」
 
 我向学姐微笑了一下，确认视野前方的信号灯变成绿色后，和她并肩走上了人行横道。
 
