--- a/vol1/01-17.md
+++ b/vol1/01-17.md
@@ -2,35 +2,35 @@
 
 &emsp;
 
-“雨宫同学你这么能吃的？”
+「雨宫同学你这么能吃的？」
 
-“只是有点饿了而已。倒是学姐你点了这么多，就不怕吃不下吗？”
+「只是有点饿了而已。倒是学姐你点了这么多，就不怕吃不下吗？」
 
 我放下手中盛有冷麦茶的杯子，看向服务员刚刚送到桌上的菜品。渡边学姐的面前摆着特大份的牛肉盖饭、芝士鸡腿、温泉蛋、沙拉和味增汤，而我的面前则是特大份的泡菜生姜烧肉盖饭、秋刀鱼、炸鸡块、冷豆腐和豚汁。
 
 面对我的问题，学姐露出了狡黠的微笑：
 
-“以前和家人或是朋友出去聚餐的时候，我都是负责清理盘子的那个人。相比之下，我更在意雨宫同学你这一边是不是真的能吃下去。”
+「以前和家人或是朋友出去聚餐的时候，我都是负责清理盘子的那个人。相比之下，我更在意雨宫同学你这一边是不是真的能吃下去。」
 
-“我觉得应该问题不大，真到了吃不下去了的时候，我也会找你求援的。但学姐也别太勉强自己了。”
+「我觉得应该问题不大，真到了吃不下去了的时候，我也会找你求援的。但学姐也别太勉强自己了。」
 
 平心而论，我对自己这不健康的饮食习惯并非没有自觉。毕竟，这和我经常生病的体质问题之间也绝谈不上毫无关系。
 
 然而，别说自己购买食材学习烹饪了，我连从教学楼的地下经车库走到食堂的兴趣都没有多少。更多的时候还是选择在教学楼里的小餐厅随便吃点什么，乃至于干脆在便利店里解决。
 
-我不再讲什么，只是将筷子伸向冷豆腐，将它连同烧肉盖饭随意塞进肚子里。看到我这个样子的学姐叹了口气，说了一句“我开动了”之后，也开始吃起面前的菜品。
+我不再讲什么，只是将筷子伸向冷豆腐，将它连同烧肉盖饭随意塞进肚子里。看到我这个样子的学姐叹了口气，说了一句「我开动了」之后，也开始吃起面前的菜品。
 
 十分钟后，面前的盘子和碗已然空空如也。我稍微抬起头，恰好与还在吃饭的学姐四目相对。
 
-“你这个人还真是……”
+「你这个人还真是……」
 
-“对不起，我没有催学姐的意思。”
+「对不起，我没有催学姐的意思。」
 
 学姐想要加快进食的动作，却被我阻止了。
 
-“真拿你没办法。下午你没关系吗？”
+「真拿你没办法。下午你没关系吗？」
 
-“我觉得应该没什么，稍微走走路就好了。学姐慢慢吃就可以。”
+「我觉得应该没什么，稍微走走路就好了。学姐慢慢吃就可以。」
 
 我说完之后，倒了一杯冷麦茶，将其一饮而尽。
 
@@ -38,23 +38,23 @@
 
 大约十五分钟后，离开す〇家的我们沿着自动扶梯下到了二楼。
 
-“哇——吃得好饱——”
+「哇——吃得好饱——」
 
-“我也是。前面就是学姐说的书店吧？”
+「我也是。前面就是学姐说的书店吧？」
 
-“嗯。我们进去看看。”
+「嗯。我们进去看看。」
 
 刚一走进书店，学姐就被摆在推荐区上的书籍吸引了目光。
 
-“今天这里的推荐主题是旅行哦。”
+「今天这里的推荐主题是旅行哦。」
 
-“这样吗？”
+「这样吗？」
 
 我冷淡地回应着。学姐露出了不解的表情：
 
-“雨宫同学不喜欢旅行吗？”
+「雨宫同学不喜欢旅行吗？」
 
-“该怎么说呢……我不太喜欢和人一起出门旅行吧。”
+「该怎么说呢……我不太喜欢和人一起出门旅行吧。」
 
 没错。如果还有比呆在那个令人窒息的家里更加难受的事，那一定是和家人出去旅游吧。
 
@@ -62,21 +62,21 @@
 
 事到如今，我甚至懒得再看自己当时被那个女人拍下来的样子——哪怕连强装出来的笑容，都是如此的屈指可数。而在这之后，我就再没留下过什么照片了。
 
-“那你有一个人出去旅行过吗？”
+「那你有一个人出去旅行过吗？」
 
-“一个人的话，大概也只能叫外出吧。就像我被那位女大学生搞了的那次一样。”
+「一个人的话，大概也只能叫外出吧。就像我被那位女大学生搞了的那次一样。」
 
 气氛突然有点尴尬。为了转移话题，我撇开不必要的回想向学姐问道：
 
-“那学姐你呢？”
+「那学姐你呢？」
 
-“对啊。我感觉出门旅行本身就足以创造很多美好的回忆了。比如，每年黄金周我都会和父母一起去泡温泉。”
+「对啊。我感觉出门旅行本身就足以创造很多美好的回忆了。比如，每年黄金周我都会和父母一起去泡温泉。」
 
 我再一次陷入了沉默。伤心和羡慕的感情，在心中互相缠绕着，化为解不开的线团。
 
-“……你没事吧？”
+「……你没事吧？」
 
-“……我没什么。”
+「……我没什么。」
 
 过了不知道多久，我才向学姐挤出一个微笑，随后看向摆在推荐区上的书籍。
 
@@ -102,7 +102,7 @@
 
 由于大量文学或影视作品的渲染，尼古拉二世一家遭遇的悲剧早已不是什么鲜为人知的东西。这本《Le Dernier des Tsars》描述的，正是从沙皇被迫退位到全家被处决为止的这五百多天内发生的事。
 
-当翻到中段的时候，我才意识到，在内战期间被处决的罗曼诺夫家族成员，远不止尼古拉二世和他的至亲。然而在我看来，这一系列被绝大多数人认为“惨无人道”的处决行动，却并非毫无合理性可言。
+当翻到中段的时候，我才意识到，在内战期间被处决的罗曼诺夫家族成员，远不止尼古拉二世和他的至亲。然而在我看来，这一系列被绝大多数人认为「惨无人道」的处决行动，却并非毫无合理性可言。
 
 当时的俄罗斯正处于各个势力为争夺权力而战争不断的混沌状态——简直就和如今时常被人提到的生存游戏中的场面一样。然而与生存游戏不同，每一天都有无数俄罗斯人的生命在内战中消失，与此同时，整个国家还面临着被外部势力干涉的风险。
 
@@ -124,33 +124,33 @@
 
 站起身准备把书放回去的我，发现渡边学姐就坐在离我不远的地方。
 
-“学姐在读哪本书？”
+「学姐在读哪本书？」
 
 听到我的问题，学姐将封面转了过来。是雷蒙德·卡佛的《Les Débutants》。
 
-“这本书最初出版的名字，其实是这个。”
+「这本书最初出版的名字，其实是这个。」
 
 她又拿出手机，操作了两下，随后示意我看向屏幕。
 
-“《De quoi parlons-nous quand nous parlons d'Amour》？好长的名字。”
+「《De quoi parlons-nous quand nous parlons d'Amour》？好长的名字。」
 
 看来十几年前开始被拉长的轻小说书名，也并非毫无传统。
 
-“出版商从古至今都是一个样子，比如丹尼尔·笛福的那本漂流小说的第一版标题就有三百多个英文单词。”
+「出版商从古至今都是一个样子，比如丹尼尔·笛福的那本漂流小说的第一版标题就有三百多个英文单词。」
 
-“与其说是小说标题，还不如说是<ruby><rb>摘要</rb><rt>Abstract</rt></ruby>吧？”
+「与其说是小说标题，还不如说是<ruby><rb>摘要</rb><rt>Abstract</rt></ruby>吧？」
 
-“毕竟要让读者第一眼就知道这本书讲了什么嘛。雨宫同学看的是什么书？”
+「毕竟要让读者第一眼就知道这本书讲了什么嘛。雨宫同学看的是什么书？」
 
 学姐这时注意到了我手上的那本《Le Dernier des Tsars》。我回答道：
 
-“历史研究类的著作。我对世界史相关的书比较有兴趣。不过，读这类书的时候脑子里总得想象一副地图，所以也不是什么很轻松的事。”
+「历史研究类的著作。我对世界史相关的书比较有兴趣。不过，读这类书的时候脑子里总得想象一副地图，所以也不是什么很轻松的事。」
 
-“你打算买这本吗？”
+「你打算买这本吗？」
 
 我摇摇头。对我而言，很多书只要读懂大致的意思就够了，最多也就是购买电子版，如果把所有感兴趣的书都买一套纸质版带回去，未免太占空间。
 
-“真遗憾呢。我倒是有本书想买，不过没有在书架上找到。回去吧。”
+「真遗憾呢。我倒是有本书想买，不过没有在书架上找到。回去吧。」
 
 我们将各自手中的书放回原位后，便向书店的门口走去。
 
