--- a/vol1/01-19.md
+++ b/vol1/01-19.md
@@ -20,21 +20,21 @@
 
 我想联系一下唯小姐，但却没有她的联系方式。正当我打算放下手机的时候，手机传来了震动感。
 
-屏幕上显示着“蒲池隆子”四个字。
+屏幕上显示着「蒲池隆子」四个字。
 
-“喂，妈妈吗，是我。”
+「喂，妈妈吗，是我。」
 
-“我这边正忙着呢。你找我有什么事？”
+「我这边正忙着呢。你找我有什么事？」
 
-“我想取一下你以前用的教科书。晚上我可以回家拿吗？”
+「我想取一下你以前用的教科书。晚上我可以回家拿吗？」
 
-“我今天有事空不开，回去估计都要睡觉了，过几天再说吧。政树你拿这些教科书有什么用？”
+「我今天有事空不开，回去估计都要睡觉了，过几天再说吧。政树你拿这些教科书有什么用？」
 
-“我想复习一下教材，为学校里的课程做一下准备。”
+「我想复习一下教材，为学校里的课程做一下准备。」
 
-“哦。那过一会政树你列个清单出来发给我，我让唯过两天送过去。这边还有事忙，我就先挂了。”
+「哦。那过一会政树你列个清单出来发给我，我让唯过两天送过去。这边还有事忙，我就先挂了。」
 
-“我知道了。再见。”
+「我知道了。再见。」
 
 话音刚落，我就听到了通话结束的提示音——这让我更加觉得有什么地方奇怪。
 
@@ -46,25 +46,25 @@
 
 没过一会，电话那边就传来了声音。
 
-“您好，我是柏原。”
+「您好，我是柏原。」
 
-“琴美阿姨吗？我是政树。”
+「琴美阿姨吗？我是政树。」
 
-“是政树啊，打电话过来真是稀奇。有什么事情吗？”
+「是政树啊，打电话过来真是稀奇。有什么事情吗？」
 
-“刚才我给我妈打了电话，说要回家取她的教科书自己看。但我妈要我列个清单出来，过几天再让唯送到学校给我。她这个样子，我总觉得是不想让我回去。琴美阿姨，我妈出了什么事情吗？”
+「刚才我给我妈打了电话，说要回家取她的教科书自己看。但我妈要我列个清单出来，过几天再让唯送到学校给我。她这个样子，我总觉得是不想让我回去。琴美阿姨，我妈出了什么事情吗？」
 
-“政树你不知道吗？”
+「政树你不知道吗？」
 
 琴美阿姨的声音似乎有些诧异。
 
-“不知道什么？”
+「不知道什么？」
 
-“你爸妈分开的事情。”
+「你爸妈分开的事情。」
 
-“分开？什么时候的事？”
+「分开？什么时候的事？」
 
-“你妈星期一联系我的时候提到的。她说上个星期一的时候两边就已经开始联系律师，给我打电话的时候相关的手续已经基本办完了。怎么，他们没和你讲吗？”
+「你妈星期一联系我的时候提到的。她说上个星期一的时候两边就已经开始联系律师，给我打电话的时候相关的手续已经基本办完了。怎么，他们没和你讲吗？」
 
 居然是上周的星期一吗？
 
@@ -72,11 +72,11 @@
 
 然而，没必要在琴美阿姨面前提这些多余的事。我调整着措辞回答：
 
-“对不起，我没听说他们分开的事。”
+「对不起，我没听说他们分开的事。」
 
-“……抱歉，政树，听到这件事你应该很难受吧。”
+「……抱歉，政树，听到这件事你应该很难受吧。」
 
-“我还好。”
+「我还好。」
 
 我并没有对琴美阿姨说谎。见惯了那两个人之间宛如平行线一般的生活，时不时还能回想起那两个人之间宛如仇人见面时才会上演的争吵画面的我，早就把那两个人的分别，当成一项注定要发生的事了。
 
@@ -84,11 +84,11 @@
 
 不能让琴美阿姨察觉到我的状况。我挤出嗓子里的声音说道：
 
-“琴美阿姨，抱歉给您添麻烦了。我先休息一下，之后有机会再联系您。”
+「琴美阿姨，抱歉给您添麻烦了。我先休息一下，之后有机会再联系您。」
 
-“好的，政树你也多注意。那就再见啦。”
+「好的，政树你也多注意。那就再见啦。」
 
-“非常感谢，再见。”
+「非常感谢，再见。」
 
 我赶紧把手机从耳边拿下，拇指重重地按在红色的挂断按钮上。
 
@@ -106,7 +106,7 @@
 
 尽管脑海中盘旋着各种各样的内容，但我却连动一下的心情都没有。
 
-“分开……也就是说，离婚吗。”
+「分开……也就是说，离婚吗。」
 
 丢在一旁的手机沉默着。这几个小时里，我没有接到过一通电话，也没有收到过一条消息。
 
@@ -134,51 +134,51 @@
 
 在手机的闹铃振动中醒来的我，拖着脚步走向洗面台用冷水冲了下脸，又用毛巾仔细擦干，随后就将书包挎在左肩，离开宿舍向教学楼走去。
 
-“雨宫你脸色不太好啊，身体没问题吧？”
+「雨宫你脸色不太好啊，身体没问题吧？」
 
 刚一坐在座位上，身后的工藤就向我搭话。
 
-“嗯？我哪里有问题了？脸上有黑眼圈吗？”
+「嗯？我哪里有问题了？脸上有黑眼圈吗？」
 
-“黑眼圈倒是没有，但你这脸色怎么看都不对劲吧。”
+「黑眼圈倒是没有，但你这脸色怎么看都不对劲吧。」
 
-“可能我昨晚没休息好吧，如果上午撑不过去，工藤你就帮我请个假。”
+「可能我昨晚没休息好吧，如果上午撑不过去，工藤你就帮我请个假。」
 
-“请假吗……说起来我妈今天早上还问我认不认识你呢。”
+「请假吗……说起来我妈今天早上还问我认不认识你呢。」
 
 脑子中冒出了一个问号。工藤的母亲怎么会向他问到我的事？
 
-“工藤你怎么回答的？”
+「工藤你怎么回答的？」
 
-“我说认识，我妈就对我说，让你中午到她的事务所去一趟。”
+「我说认识，我妈就对我说，让你中午到她的事务所去一趟。」
 
-“事务所？”
+「事务所？」
 
-“是律师事务所。”
+「是律师事务所。」
 
 脑海中闪过了一个猜测的我，立刻向工藤试探性地问道：
 
-“工藤，你妈妈找我……是不是和我父母离婚的事有关？”
+「工藤，你妈妈找我……是不是和我父母离婚的事有关？」
 
-“喂喂，雨宫你是怎么知道的？我都还没讲到这呢。”
+「喂喂，雨宫你是怎么知道的？我都还没讲到这呢。」
 
-“随便猜的。被律师约上门，我也只能想到这个了。”
+「随便猜的。被律师约上门，我也只能想到这个了。」
 
-“行吧，服了你了……我妈的确是为这个事找你。她还说自己的事务所头一次遇上这种状况，所以花了不少时间。”
+「行吧，服了你了……我妈的确是为这个事找你。她还说自己的事务所头一次遇上这种状况，所以花了不少时间。」
 
 大概是那两个人离婚的一些细节让工藤的母亲闻所未闻吧。由于还有点犯困，我只能摇摇头让自己尽可能保持清醒，向工藤问出最后一个问题：
 
-“你妈妈让我什么时候上门？地点在哪？”
+「你妈妈让我什么时候上门？地点在哪？」
 
-“中午12点，地址我现在发给你。”
+「中午12点，地址我现在发给你。」
 
 随后我的手机振动了一下，画面上显示的是工藤发来的地址信息。
 
-“谢啦。工藤你下午帮我请假吧，我大概来不及回来上课。”
+「谢啦。工藤你下午帮我请假吧，我大概来不及回来上课。」
 
-“没关系。遇上这种事，我也知道你不好受。”
+「没关系。遇上这种事，我也知道你不好受。」
 
-“我还好吧。”
+「我还好吧。」
 
 铃声响起，菅田老师走了进来。我们慌忙端正坐姿，等待着HR的开始。
 
