--- a/vol1/01-21.md
+++ b/vol1/01-21.md
@@ -6,13 +6,13 @@ SIDE：みゆき
 
 &emsp;
 
-“みゆき，你看那边。”
+「みゆき，你看那边。」
 
 我和さやか吃完午饭后，沿着天桥返回主教学楼。这时，さやか突然抓住了我的手，示意我向她指的方向看去。
 
 学校入口闸机的另一边，一个穿着高等部制服的矮个子男生的身影恰巧出现在视野的一角，紧接着就随着扶梯的下降而消失了。
 
-“みゆき，那个男生……是不是之前你带我去见的那位，一年级的……雨宫同学？”
+「みゆき，那个男生……是不是之前你带我去见的那位，一年级的……雨宫同学？」
 
 看到那个男生的瞬间，我就产生了他是雨宫同学的预感，さやか的问题则更加让我的心中疑窦丛生。
 
@@ -28,13 +28,13 @@ SIDE：みゆき
 
 以及——隐藏在健谈之下的，令我难以忽视的阴郁。
 
-“我们去他的班上问一下吧。”
+「我们去他的班上问一下吧。」
 
 我很难想象，雨宫同学会为了拿文件资料而特地请假。所以，我决定过一会到他的班级，找他的同学问一问情况。
 
 &emsp;
 
-“请问雨宫政树同学在吗？”
+「请问雨宫政树同学在吗？」
 
 我们心绪不宁地走到一年A班的门口，随后さやか向教室里的后辈们问着。
 
@@ -50,63 +50,63 @@ SIDE：みゆき
 
 每当雨宫同学说出一个字，都会如同月球的引力带来的潮汐现象一般，让我心跳加速。
 
-“你们要找的是雨宫吗？他下午请假了。”
+「你们要找的是雨宫吗？他下午请假了。」
 
 从教室中传来的男生声音打断了我的思考。我之前见过那个男生，应该是一年A班的学级委员。
 
 回过神来的时候，我已经脱口而出：
 
-“发生什么事了吗？”
+「发生什么事了吗？」
 
 男生迟疑了一下才向我回答：
 
-“两位学姐，可以单独找个地方说话吗？”
+「两位学姐，可以单独找个地方说话吗？」
 
-“嗯，拜托你了。”
+「嗯，拜托你了。」
 
 さやか看了看我的脸，随后向那个男生示意了一下，我们三人就这样离开一年A班，向应急楼梯的方向走去。
 
 &emsp;
 
-“我妈找雨宫有事，所以他托我请半天的假。”
+「我妈找雨宫有事，所以他托我请半天的假。」
 
 刚一走到应急楼梯，这位姓工藤的男生就抛出了让我意想不到的内容。
 
-“工藤同学的……母亲吗？”
+「工藤同学的……母亲吗？」
 
-“对，我妈是律师。之前接到雨宫的父母的委托，处理财产分割和抚养权等一系列事项。由于其中的一部分内容需要雨宫本人确认，所以我妈才要把他叫过去。”
+「对，我妈是律师。之前接到雨宫的父母的委托，处理财产分割和抚养权等一系列事项。由于其中的一部分内容需要雨宫本人确认，所以我妈才要把他叫过去。」
 
-财产分割和抚养权——“离婚”这个词一瞬间在我的脑海中闪现。
+财产分割和抚养权——「离婚」这个词一瞬间在我的脑海中闪现。
 
-“雨宫同学的父母……离婚了吗？”
+「雨宫同学的父母……离婚了吗？」
 
 听到我的问题，工藤同学露出了略显为难的表情。
 
-“我妈说她也是头一次遇到雨宫父母这样的情况，虽然两边都非常配合，但查阅相关的文件还是花了不少时间。更具体的我妈就没有讲了，毕竟她说的这点内容已经够让我摸不着头脑。”
+「我妈说她也是头一次遇到雨宫父母这样的情况，虽然两边都非常配合，但查阅相关的文件还是花了不少时间。更具体的我妈就没有讲了，毕竟她说的这点内容已经够让我摸不着头脑。」
 
 听完这段话的我一时间不知该怎样开口。雨宫同学的家庭状况，复杂到超出常人能理解的程度——我只能得出这样的结论。
 
 回想起来，半个月前雨宫同学发高烧的时候，曾经向我提到过家里的一些事。对于在和睦的家庭中长大的我而言，很难想象雨宫同学在这近乎窒息的环境中的生活——就像水中的鱼难以想象没有了水的生活一样。
 
-“不好意思，大中午的把工藤同学你叫出来，却是问别的男生的事。”
+「不好意思，大中午的把工藤同学你叫出来，却是问别的男生的事。」
 
 听到さやか的声音，工藤同学摇了摇头：
 
-“哪里的事。不过，今天从早上开始，雨宫的脸色就很不好——大概家里的事他早就清楚了吧。”
+「哪里的事。不过，今天从早上开始，雨宫的脸色就很不好——大概家里的事他早就清楚了吧。」
 
-“就算这样……”
+「就算这样……」
 
 ——就算这样，直面自己父母离婚的事实，雨宫同学还是会觉得很难受吧。
 
 这句话刚说出一半，我就停住了嘴。我只不过是个爱多管闲事的学姐，哪有什么资格关心雨宫同学的想法呢？
 
-“渡边学姐，怎么了？”
+「渡边学姐，怎么了？」
 
-“不，没什么。马上要上课了，我们先回去吧，さやか。”
+「不，没什么。马上要上课了，我们先回去吧，さやか。」
 
-“嗯。工藤同学，非常感谢。”
+「嗯。工藤同学，非常感谢。」
 
-“我这边才是。”
+「我这边才是。」
 
 我们互相点了点头，随后各自走上了返回教室的路。
 
@@ -118,7 +118,7 @@ SIDE：みゆき
 
 如果问他家里发生了什么，大概又会对他产生精神上的二次伤害。
 
-如果随便找个无关紧要的话题——我想问问他有没有收到书店的回复，却想起昨天店员说“过一个星期左右才会到货”，这个问题大概只会惹来他那“学姐你是笨蛋吗”的取笑。
+如果随便找个无关紧要的话题——我想问问他有没有收到书店的回复，却想起昨天店员说「过一个星期左右才会到货」，这个问题大概只会惹来他那「学姐你是笨蛋吗」的取笑。
 
 我不断在手机上编辑着消息，又将写好的内容删掉。如此反复而犹豫不决的结果，便是最后我只发了一句非常短的话。
 
@@ -144,7 +144,7 @@ SIDE：みゆき
 
 【MSK: Gleis 4-B】
 
-Hauptbahnhof……我记得昨天雨宫同学提到市中心有大量以德语标识的地名，赶紧用在线翻译查了一下，确认Hauptbahnhof指的是“火车总站”，而Gleis……应该是“站台”的意思。
+Hauptbahnhof……我记得昨天雨宫同学提到市中心有大量以德语标识的地名，赶紧用在线翻译查了一下，确认Hauptbahnhof指的是「火车总站」，而Gleis……应该是「站台」的意思。
 
 【snowsee: 我放学之后去找你】
 
