--- a/vol1/01-23.md
+++ b/vol1/01-23.md
@@ -6,7 +6,7 @@ SIDE：みゆき
 
 &emsp;
 
-“那是因为我喜欢你。我没法看着如此闪耀的你就这样放弃自己的生命，因为我最不能原谅的，就是自己视为宝物的东西被人弃若敝屣。”
+「那是因为我喜欢你。我没法看着如此闪耀的你就这样放弃自己的生命，因为我最不能原谅的，就是自己视为宝物的东西被人弃若敝屣。」
 
 说出来了。
 
@@ -48,9 +48,9 @@ SIDE：みゆき
 
 然而，那并不是回答，而是疑问。
 
-“渡边学姐。你刚才的话，是认真的吗？”
+「渡边学姐。你刚才的话，是认真的吗？」
 
-他终究还是听到了，而且还问我是不是“认真”的。
+他终究还是听到了，而且还问我是不是「认真」的。
 
 到底该怎么回答才好——是说出自己的真心话，还是含糊其辞，说自己只是在开玩笑？
 
@@ -58,23 +58,23 @@ SIDE：みゆき
 
 迟疑了一会，我才吞吞吐吐地回答：
 
-“我是……认真的。”
+「我是……认真的。」
 
-“我明白了。那么，我现在就给出自己的答复，希望学姐你不要听错。”
+「我明白了。那么，我现在就给出自己的答复，希望学姐你不要听错。」
 
 雨宫同学的目光，锐利到我难以直视。
 
 ——这就是所谓的公开处刑吗？
 
-“<ruby><rb>我，雨宫政树</rb><rt>わたし、雨宮政樹は</rt></ruby>——”
+「<ruby><rb>我，雨宫政树</rb><rt>わたし、雨宮政樹は</rt></ruby>——」
 
 ——不要。不要这样。如果你拒绝了我的话，明天，不，黄金周结束之后，我又该怎么面对你呢？
 
-“<ruby><rb>将会把自己的一切</rb><rt>この自分のすべてを</rt></ruby>——”
+「<ruby><rb>将会把自己的一切</rb><rt>この自分のすべてを</rt></ruby>——」
 
 泪水宛如要夺眶而出的我，不由得用双手捂住了脸。
 
-“<ruby><rb>都交给你——渡边みゆき学姐</rb><rt>あなた——渡邊みゆきに差し上げます</rt></ruby>。<ruby><rb>从此时此地，直到永远</rb><rt>今ここから、未来永劫まで</rt></ruby>。”
+「<ruby><rb>都交给你——渡边みゆき学姐</rb><rt>あなた——渡邊みゆきに差し上げます</rt></ruby>。<ruby><rb>从此时此地，直到永远</rb><rt>今ここから、未来永劫まで</rt></ruby>。」
 
 意料之外的话语，让我不禁抬起了头。
 
@@ -82,33 +82,33 @@ SIDE：みゆき
 
 然而，他的话还在继续：
 
-“<ruby><rb>大概我出生以来，还是第一次被人喜欢上吧</rb><rt>『好き』だと言われたのは、生まれてから初めてだったかも知らない</rt></ruby>。<ruby><rb>所以，我很开心</rb><rt>だから、わたしは凄く嬉しい</rt></ruby>。”
+「<ruby><rb>大概我出生以来，还是第一次被人喜欢上吧</rb><rt>『好き』だと言われたのは、生まれてから初めてだったかも知らない</rt></ruby>。<ruby><rb>所以，我很开心</rb><rt>だから、わたしは凄く嬉しい</rt></ruby>。」
 
 雨宫同学停顿了一下，说出了最后的话：
 
-“<ruby><rb>渡边学姐……我喜欢你</rb><rt>渡邊先輩……わたしは、あなたが好きです</rt></ruby>。<ruby><rb>还有……</rb><rt>そして……</rt></ruby><ruby><rb>谢谢你，选择了我</rb><rt>選んでくれて、ありがとう</rt></ruby>。”
+「<ruby><rb>渡边学姐……我喜欢你</rb><rt>渡邊先輩……わたしは、あなたが好きです</rt></ruby>。<ruby><rb>还有……</rb><rt>そして……</rt></ruby><ruby><rb>谢谢你，选择了我</rb><rt>選んでくれて、ありがとう</rt></ruby>。」
 
-“雨宫同学，你这是在……哭吗？”
+「雨宫同学，你这是在……哭吗？」
 
 听到我的问题，他露出了惊讶的神色，似乎完全没有意识到自己眼中已满是泪水。
 
-“啊……我居然，还会，哭吗……？”
+「啊……我居然，还会，哭吗……？」
 
-“雨宫同学的话，可以在我这里撒娇哦。”
+「雨宫同学的话，可以在我这里撒娇哦。」
 
 我向他伸出右手，随后他就扑到了我的怀里。我在隐约之间，听到了他的啜泣声。
 
 &emsp;
 
-“……下雨了呢。”
+「……下雨了呢。」
 
 当我们通过电梯进入地下通道，又穿过火车站的大厅走到门口的时候，才发现外面已经淅淅沥沥地下起了雨。
 
-“みゆき带伞了吗？”
+「みゆき带伞了吗？」
 
-“折叠伞倒是带了一把……等等。雨宫同学你怎么突然直接叫我名字了？”
+「折叠伞倒是带了一把……等等。雨宫同学你怎么突然直接叫我名字了？」
 
-“正在交往的恋人难道不都是这样的吗？みゆき也可以直接叫我的名字啊。”
+「正在交往的恋人难道不都是这样的吗？みゆき也可以直接叫我的名字啊。」
 
 雨宫同学的回答，让我不由得有点脸颊发烫。我的确在**独处**的时候叫过他的名字，但这种事打死我都不会在他的面前说出来。
 
@@ -116,23 +116,23 @@ SIDE：みゆき
 
 我一边想着无关紧要的内容，一边反驳：
 
-“一上来就直接叫名字还是太跳跃性了吧。”
+「一上来就直接叫名字还是太跳跃性了吧。」
 
 听到我的话，雨宫同学反过来问道：
 
-“那学姐想要我怎么称呼呢？……嗯，比如学姐的家人平常是怎么称呼你的？”
+「那学姐想要我怎么称呼呢？……嗯，比如学姐的家人平常是怎么称呼你的？」
 
-“爸爸和妈妈的话，一般叫我《ユキ》。”
+「爸爸和妈妈的话，一般叫我《ユキ》。」
 
-“那我叫你《ユキ姉》好了，反正我们差两岁嘛。”
+「那我叫你《ユキ姉》好了，反正我们差两岁嘛。」
 
 他后面讲出的内容，这让我不禁有些诧异。
 
-“两岁？这是怎么回事？”
+「两岁？这是怎么回事？」
 
 雨宫同学迟疑了一下回答：
 
-“那个女人似乎通过什么台面下的手段，让我提前一年上了学。如果ユキ姉不信的话，可以看我的出生证明。”
+「那个女人似乎通过什么台面下的手段，让我提前一年上了学。如果ユキ姉不信的话，可以看我的出生证明。」
 
 随后他从书包中拿出一个文件袋，从中抽出一张有着蓝色纹样的纸递给了我。
 
@@ -148,75 +148,75 @@ MASAKI AMAMIYA。09-23-××××。
 
 鬼使神差之下，将出生证明还给雨宫同学的我说出了近乎调戏的内容：
 
-“你刚才说会把自己的一切都交给我……”
+「你刚才说会把自己的一切都交给我……」
 
-“对，怎么了？”
+「对，怎么了？」
 
-“可是有两样东西你已经交不出来了呢。”
+「可是有两样东西你已经交不出来了呢。」
 
-“哪两样？”
+「哪两样？」
 
 脸颊有点发红。真希望他没有看出来。
 
-“初吻和处男。”
+「初吻和处男。」
 
 雨宫同学怔了一下，随后叹了口气回答：
 
-“倒也是呢。怎么，ユキ姉对我的身体这么有兴趣？”
+「倒也是呢。怎么，ユキ姉对我的身体这么有兴趣？」
 
 我凑到他的耳边，以只有我们两人能听清的音量低声说道：
 
-“我可是现在就想听到你娇喘的声音啊。”
+「我可是现在就想听到你娇喘的声音啊。」
 
 回过神来，才发现他的耳垂已经通红了。
 
-“呜哇……雨宫同学你这个样子好可爱。”
+「呜哇……雨宫同学你这个样子好可爱。」
 
-“吵死了。还有，ユキ姉用姓氏称呼我是几个意思啊？”
+「吵死了。还有，ユキ姉用姓氏称呼我是几个意思啊？」
 
-“我不都说了，直接叫名字太跳跃性了吗？”
+「我不都说了，直接叫名字太跳跃性了吗？」
 
-听到我这句话，雨宫同学陷入了思考。过了一会，他拿出手机，在我的面前启动了便签本的程序，又在上面输入了“Amamiya”这个词。
+听到我这句话，雨宫同学陷入了思考。过了一会，他拿出手机，在我的面前启动了便签本的程序，又在上面输入了「Amamiya」这个词。
 
 随后，他调出输入法，将后面的a、i、a三个字母删掉，剩下的字母是——
 
 Ammy。
 
-“エミー？有点像女孩子的名字呢。”
+「エミー？有点像女孩子的名字呢。」
 
-“ユキ姉上次在笔记本上画我的时候，不也是把我画成女孩子了吗？我觉得这个称呼还挺不错的。”
+「ユキ姉上次在笔记本上画我的时候，不也是把我画成女孩子了吗？我觉得这个称呼还挺不错的。」
 
-“好啊。请多指教，エミー。”
+「好啊。请多指教，エミー。」
 
-“这边才是吧，ユキ姉。”
+「这边才是吧，ユキ姉。」
 
 四目相对的我们各自微笑了一下后，我从书包中拿出折叠伞，交给了雨宫同学——不，应该是エミー。随后，我们便走到了火车站外的石板路上。
 
-“说起来，ユキ姉是想现在就去情人旅馆，还是先吃点什么再去？”
+「说起来，ユキ姉是想现在就去情人旅馆，还是先吃点什么再去？」
 
-“先吃点东西吧。エミー中午有吃过什么吗？”
+「先吃点东西吧。エミー中午有吃过什么吗？」
 
-“我只吃了两根能量棒，喝了一罐咖啡。再就是在MgDonald吃了一份MgNuggets，一小份薯条和一杯可乐。”
+「我只吃了两根能量棒，喝了一罐咖啡。再就是在MgDonald吃了一份MgNuggets，一小份薯条和一杯可乐。」
 
 听到如此简陋的午餐配置，我不由得吐槽道：
 
-“那还不赶紧吃点东西。没有体力的话要怎么做啊？”
+「那还不赶紧吃点东西。没有体力的话要怎么做啊？」
 
-“ユキ姉有什么想吃的吗？”
+「ユキ姉有什么想吃的吗？」
 
-“エミー有什么想吃的吗？”
+「エミー有什么想吃的吗？」
 
-“我还真不太知道……”
+「我还真不太知道……」
 
 一阵尴尬的沉默中，我们又往前走了一段路。这时，Сайзьрыя的招牌映入了我的视野。
 
-“要么去那边吧？”
+「要么去那边吧？」
 
-“也行啊。就当填饱肚子好了。”
+「也行啊。就当填饱肚子好了。」
 
-“不要**吃太多**哦，否则一会可就难受了。”
+「不要**吃太多**哦，否则一会可就难受了。」
 
-“知道了啦。”
+「知道了啦。」
 
 我摸了摸露出苦笑的エミー的头，随后一起走向Сайзьрыя的入口。
 
