--- a/vol1/01-24.md
+++ b/vol1/01-24.md
@@ -2,6 +2,30 @@
 
 &emsp;
 
+我又做了一个梦。
+
+是和昨天下午颇为相似的场景。孤独无助的我，独自坐在火车站的站台上。然而，站台上却没有ユキ姉的身影。
+
+置身梦境之外的我告诉自己，ユキ姉绝不可能对这样的我置之不理。那么就只剩下了一个可能——在这场梦境所示的世界线上，我并不认识她。
+
+——已经没人需要我了。
+
+一辆列车从远处逐渐靠近站台。我站起身，向站台的边缘走去。
+
+一步，两步。
+
+再走一步，就要进入随时可能被列车卷入的危险区域了。我可以感觉到，一些在站台上等待列车的乘客的目光正看向我的方向，甚至还有几个人在窃窃私语。
+
+列车的速度逐渐下降。只要我什么也不想，就这样一口气冲过去的话，就能获得永远的解脱了吧。然而，那一步却无论如何都迈不出去。
+
+——放弃吧。除了按照那个女人的计划活着，你根本不可能有别的选择。
+
+冰冷的声音再次响起。没错，我只是一个连舍弃生命都做不到的胆小鬼罢了。
+
+列车停在了站台边缘。我转过身，往出口的方向走去。
+
+&emsp;
+
 手机的振动声吵醒了我。我看向屏幕，上面显示着我不熟悉的号码。
 
 大概是骚扰电话吧——这样的想法让我选择了无视。
@@ -10,67 +34,67 @@
 
 为了确认情况，我按下了通话按键。
 
-“您好，我是雨宫。”
+「您好，我是雨宫。」
 
-‘是政树先生吗？我是唯。’
+『是政树先生吗？我是唯。』
 
-“哦，是<ruby><rb>唯</rb><rt>唯さん</rt></ruby>啊。有什么事吗？”
+「哦，是<ruby><rb>唯</rb><rt>唯さん</rt></ruby>啊。有什么事吗？」
 
-‘隆子阿姨说，你之前找她要她以前用过的教科书……’
+『隆子阿姨说，你之前找她要她以前用过的教科书……』
 
 原来如此，是这件事吗。我没等唯说完就立刻回答：
 
-“对，是有这回事。我需要她高中时用过的教科书，以及她在大学用过的专业课教材。清单我一会发给我妈，你按清单送过来就行。”
+「对，是有这回事。我需要她高中时用过的教科书，以及她在大学用过的专业课教材。清单我一会发给我妈，你按清单送过来就行。」
 
-‘好的。我可以今天送过去吗？’
+『好的。我可以今天送过去吗？』
 
-“我想想……一会我把时间告诉你吧。”
+「我想想……一会我把时间告诉你吧。」
 
-‘好的。那我就挂了。’
+『好的。那我就挂了。』
 
-“OK。麻烦你了。”
+「OK。麻烦你了。」
 
 按下挂断键的我，正思考着什么时候让唯送书过来的时候，身旁突然传来了似乎有些不满的声音。
 
-“哪个女孩子打来的电话？”
+「哪个女孩子打来的电话？」
 
-“寄住在那个女人那里的远房亲戚。她打电话给我，问可不可以今天就把教科书送过来。”
+「寄住在那个女人那里的远房亲戚。她打电话给我，问可不可以今天就把教科书送过来。」
 
 听到我的解释，ユキ姉露出了放心的表情。
 
-“行啊，那让她下午送过来吧。你有告诉她要送哪几本书吗？”
+「行啊，那让她下午送过来吧。你有告诉她要送哪几本书吗？」
 
-“我马上把清单给那个女人发过去。时间的话……下午六点钟？”
+「我马上把清单给那个女人发过去。时间的话……下午六点钟？」
 
-“没问题。”
+「没问题。」
 
 随后我启动Linie，开始向那个女人发送需要的教科书清单。然而，ユキ姉的手却很不老实地伸进了我的睡衣，在身体各处来回游走。
 
-“ユキ姉这是想要我袭击你吗？”
+「ユキ姉这是想要我袭击你吗？」
 
-“情趣play嘛，有什么不可以的？我就喜欢看エミー一边被我调戏一边不得不认真做事的样子。”
+「情趣play嘛，有什么不可以的？我就喜欢看エミー一边被我调戏一边不得不认真做事的样子。」
 
 这令人困扰的话语，让我忍不住想要反击。
 
-“大清早跑来袭击我，结果做完了就睡着的小姐又是哪位啊？”
+「大清早跑来袭击我，结果做完了就睡着的小姐又是哪位啊？」
 
-“看到了男孩子的生理现象，自然就想玩一玩嘛。只不过我没想到，某位男孩子居然这么经不起诱惑。”
+「看到了男孩子的生理现象，自然就想玩一玩嘛。只不过我没想到，某位男孩子居然这么经不起诱惑。」
 
 真是丢脸——如果是一般的男高中生大概会这样想吧，不过我已经无所谓了。
 
-“话先说在这里，现在的话NG。隔了两个小时就做的话，我的**那里**也会不太舒服。”
+「话先说在这里，现在的话NG。隔了两个小时就做的话，我的**那里**也会不太舒服。」
 
-“男孩子的那里这么不经用的？”
+「男孩子的那里这么不经用的？」
 
 我不假思索地回答：
 
-“我不知道别的男孩子是什么样，但我的体力的确不太行。现在再做一次的话，下午大概也没法从这个房间里出去了。说不准腿都会抖。”
+「我不知道别的男孩子是什么样，但我的体力的确不太行。现在再做一次的话，下午大概也没法从这个房间里出去了。说不准腿都会抖。」
 
-“那你昨天第一次之后紧接着怎么就来第二次了？”
+「那你昨天第一次之后紧接着怎么就来第二次了？」
 
-“大概是被性欲支配了吧，毕竟做起来很舒服嘛。ユキ姉不也一样吗？昨天做完第二次之后，洗了澡睡了一个多小时才醒过来。”
+「大概是被性欲支配了吧，毕竟做起来很舒服嘛。ユキ姉不也一样吗？昨天做完第二次之后，洗了澡睡了一个多小时才醒过来。」
 
-“彼此彼此吧。”
+「彼此彼此吧。」
 
 我一边和ユキ姉闲聊，一边承受着她的抚摸，一边心绪不宁地将清单发了过去。
 
@@ -86,21 +110,21 @@
 
 至于那些用掉的安全套，都被我第一时间丢进了垃圾桶里。
 
-“エミー，总觉得屋子里有股味道。”
+「エミー，总觉得屋子里有股味道。」
 
-“什么味道？”
+「什么味道？」
 
-“**那个**的味道。”
+「**那个**的味道。」
 
 我一下子就明白ユキ姉讲的是什么了。
 
-“说起来，我以前在网上倒是看过一个说法。不知道ユキ姉有没有听说过？”
+「说起来，我以前在网上倒是看过一个说法。不知道ユキ姉有没有听说过？」
 
-“エミー想说的是……**那个**的味道和石楠花很像？”
+「エミー想说的是……**那个**的味道和石楠花很像？」
 
-“ユキ姉居然知道吗？”
+「ユキ姉居然知道吗？」
 
-“在一部Web连载里看到的。等一下我找找。”
+「在一部Web连载里看到的。等一下我找找。」
 
 ユキ姉从枕头下摸出手机，启动浏览器搜索着什么，随后就将手机递给了我。
 
@@ -112,17 +136,17 @@ Oka〇to啊……我看向安全套盒子的包装。说起来，这次用的安
 
 我稍微读了下开头，便将手机递了回去。
 
-“我总觉得这个故事的主人公有点像……嗯……男魅魔吧？虽然也只是第一印象。”
+「我总觉得这个故事的主人公有点像……嗯……男魅魔吧？虽然也只是第一印象。」
 
-“男魅魔什么的，姐姐我身边可就有一个哦。”
+「男魅魔什么的，姐姐我身边可就有一个哦。」
 
-“吵死了啦。”
+「吵死了啦。」
 
 难以言说的羞耻心突然冒了出来。然而，看到我这个样子的ユキ姉却以愉悦的口气问道：
 
-“昨天用那么魅惑的声音在我耳边说话的人是不是你啊，**政树**？”
+「昨天用那么魅惑的声音在我耳边说话的人是不是你啊，**政树**？」
 
-“喂！”
+「喂！」
 
 这的确是事实。昨晚**做**的时候我不仅不断变换自己的声音，还以自己能用上的一切手段——也许相当笨拙——为ユキ姉提供服务。与此相对的，身体也相当满足，当被ユキ姉**直接用名字称呼**的时候，甚至会产生额外的兴奋感。
 
@@ -130,57 +154,57 @@ Oka〇to啊……我看向安全套盒子的包装。说起来，这次用的安
 
 &emsp;
 
-“SPH……左眼-3.75，右眼-3.50。CYL……左眼-1.00。”
+「SPH……左眼-3.75，右眼-3.50。CYL……左眼-1.00。」
 
 离开情人旅馆后，发现我的视线不太对头的ユキ姉，建议我去配一副眼睛。
 
 结果，一看到处方单上的数字，她的眉头就皱了起来。
 
-“都这个样子了，エミー你居然之前都不配眼镜的吗？”
+「都这个样子了，エミー你居然之前都不配眼镜的吗？」
 
-“在那个女人眼里，**我不需要戴眼镜**也是她想要在好友们面前显摆的一件事。至于我实际的视力如何，并不在她关心的范围之内。”
+「在那个女人眼里，**我不需要戴眼镜**也是她想要在好友们面前显摆的一件事。至于我实际的视力如何，并不在她关心的范围之内。」
 
 听到我无奈的回答，ユキ姉陷入了沉默。过了一会，她才伸出右手，在我的脸颊上捏了一下。
 
-“真是的……这么说来，你平常吃饭也没人管的？”
+「真是的……这么说来，你平常吃饭也没人管的？」
 
-“没有。我平常的一日三餐都是随便应付一下的。”
+「没有。我平常的一日三餐都是随便应付一下的。」
 
-“简直让我怀疑你是怎么活到现在的了。要不要我搬到旧宿舍来照顾你啊？”
+「简直让我怀疑你是怎么活到现在的了。要不要我搬到旧宿舍来照顾你啊？」
 
 一听到这句话，我下意识地反问道：
 
-“ユキ姉确定自己能把持得住吗？”
+「ユキ姉确定自己能把持得住吗？」
 
-“把持不住又怎么样？大不了轮流出钱买安全套吧。”
+「把持不住又怎么样？大不了轮流出钱买安全套吧。」
 
-“倒也是，毕竟不做好安全措施的话就麻烦大了。”
+「倒也是，毕竟不做好安全措施的话就麻烦大了。」
 
 我停顿了一下，在脑海中搜索旧宿舍的相关知识后继续说道：
 
-“没记错的话，黄金周一结束就会开放旧宿舍的入住申请。”
+「没记错的话，黄金周一结束就会开放旧宿舍的入住申请。」
 
-“好啊。我会第一时间提交申请的。到时候请多指教啦。”
+「好啊。我会第一时间提交申请的。到时候请多指教啦。」
 
 看到ユキ姉开心的样子，我也微笑了一下作为回应。这时，眼镜店的店员走了过来，提醒我们将配好的眼镜取走。
 
-“我来付钱好了。”
+「我来付钱好了。」
 
 一听到ユキ姉的话，我慌忙制止了她。
 
-“不必了吧？”
+「不必了吧？」
 
-“就当我请你的好了。作为交换，一会你要跟我去一个地方。”
+「就当我请你的好了。作为交换，一会你要跟我去一个地方。」
 
 &emsp;
 
 ユキ姉带我去的地方，是位于Kronos内部与电影院相对位置的卡拉OK包房。
 
-“是要我唱歌给你听吗？”
+「是要我唱歌给你听吗？」
 
 面对我的提问，ユキ姉直截了当地回答：
 
-“对，有一首歌，想让你唱给我听。”
+「对，有一首歌，想让你唱给我听。」
 
 随后她拿起选曲遥控器操作了两下，点了一首曲子。
 
@@ -198,57 +222,57 @@ Oka〇to啊……我看向安全套盒子的包装。说起来，这次用的安
 
 不知不觉间，泪水再一次从我的脸颊划过。
 
-“你的愿望，已经实现了哦。”
+「你的愿望，已经实现了哦。」
 
 我一边在内心自言自语着，一边继续唱着歌。
 
 ——Sans regrets, mes yeux ne sont que sur toi
 
-“我知道哦，你一直在看着我。”
+「我知道哦，你一直在看着我。」
 
 ——Tu ne sais pas encore, à quel point tu es belle
 
-“谢谢你，让我知道了自己真正想要的是什么。”
+「谢谢你，让我知道了自己真正想要的是什么。」
 
 我闭上眼睛，将自己全部的情感，化为萦绕KTV包房中的歌声。
 
 ——Tu ne t'aimez pas?
 
-“现在的我，大概可以喜欢上自己了吧。”
+「现在的我，大概可以喜欢上自己了吧。」
 
 &emsp;
 
 当我睁开双眼的时候，看到的是屏幕上显示的分数——98分。转头看去，ユキ姉竟也和我一样泪流满面。
 
-“你怎么了……”
+「你怎么了……」
 
-“我……好开心。因为エミー唱的太好听了……”
+「我……好开心。因为エミー唱的太好听了……」
 
-“好了好了。来，这是纸巾。”
+「好了好了。来，这是纸巾。」
 
 我从桌上抽出纸巾递给ユキ姉，随后摸了摸她的头。
 
-“还想听我继续唱吗？”
+「还想听我继续唱吗？」
 
-“好啊。エミー还会唱哪些歌？”
+「好啊。エミー还会唱哪些歌？」
 
-“我想想……”
+「我想想……」
 
 我低下头思考了一会，拿起遥控器又随意点了几首。之后的一个多小时，我就这样只为ユキ姉一个人而唱着歌。
 
 最后一首的评分显示在屏幕上时，ユキ姉突然问了一个问题。
 
-“要和我约定吗？”
+「要和我约定吗？」
 
-“什么约定？”
+「什么约定？」
 
 听到我的问题，ユキ姉站起身，凑到我的耳边说道：
 
-“当我想听的时候，就给我唱歌好不好？”
+「当我想听的时候，就给我唱歌好不好？」
 
 原来是这个吗——对我而言，这实在不是什么需要纠结的内容。
 
-“好啊。只要ユキ姉想听，我就给你唱。”
+「好啊。只要ユキ姉想听，我就给你唱。」
 
 随后我们拥抱在一起，交换了一个长长的吻。
 
@@ -258,11 +282,11 @@ Oka〇to啊……我看向安全套盒子的包装。说起来，这次用的安
 
 也许，这个问题根本就不需要什么回答。
 
-ユキ姉——从此以后，我大概会越来越喜欢上你吧。
+ユキ姉——我并不知道，距离自己喜欢上你，还需要多少时间。
 
-正因为和你在一起，我才有机会将伪装的自我，变成真实的自我。
+然而，正因为和你在一起，我才有机会将伪装的自我，变成真实的自我。
 
-只要有你在身旁，哪怕我的内心仍在重复着自我质疑，但我也会努力让你越来越喜欢我。
+只要有你在身旁，哪怕我的内心仍在重复着自我质疑，但我也会努力让你喜欢上我。
 
 我在心中，立下了这样的决意。
 
